# alt-hardening-scanner

./: .gitignore  Cargo.toml  Makefile  README.md  build-binary.sh  build-rpm.sh  package.json  preview-server.mjs
data/: alt-hardening-scanner.desktop  alt-hardening-scanner.metainfo.xml  gresource.xml  style.css
po/: ru.po
rpm/: alt-hardening-scanner-alt-fixes.patch  alt-hardening-scanner.spec
src/: app.rs  checks.rs  config.rs  main.rs  remediation.rs  report.rs  scanner.rs  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: checks.rs  main.rs  remediation.rs  report.rs  scanner.rs
src/models/: check.rs  mod.rs  result.rs
src/widgets/: mod.rs  scan_row.rs
ui/: index.html  main.js  style.css
