[package]
name = "alt-hardening-scanner"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
description = "ALT Linux workstation hardening scanner for FSTEC recommendations"
publish = false

[dependencies]
adw = { package = "libadwaita", version = "0.8" }
gtk = { package = "gtk4", version = "0.10" }
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
libc = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
