[package]
name            = "alt-hardening-scanner"
version         = "1.0.0"
description     = "Сканер параметров безопасности ALT РС 11 по РД ФСТЭК (Таблица 2, 25.12.2022)"
authors         = ["ALT Security Team"]
license         = "MIT"
edition         = "2021"
rust-version    = "1.77"
publish         = false

[[bin]]
name = "alt-hardening-scanner"
path = "src/main.rs"

# ── Build ──────────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Runtime ───────────────────────────────────────────────────────────────────
[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
tokio               = { version = "1", features = ["full"] }
chrono              = { version = "0.4", features = ["clock"] }
regex               = "1"

# libc нужен для проверки UID (root-check) на Unix
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Release profile ────────────────────────────────────────────────────────────
[profile.release]
opt-level     = "s"   # минимальный размер бинаря (важно для RPM)
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
